hphp/test/slow/variadic_args/by_reference.php.expectf

Fatal error: Parameter $args is both variadic and by reference; this is unsupported in %s/variadic_args/by_reference.php on line 3
